--- a/_posts/2016-12-22-expulse-dun-avion-pour-avoir-parle-arabe-ou-probablement-pas.html
+++ b/_posts/2016-12-22-expulse-dun-avion-pour-avoir-parle-arabe-ou-probablement-pas.html
@@ -31,7 +31,7 @@ author:
 </p></blockquote>
 <p>Je sais pas pour vous, mais à partir de maintenant, je vais supposer qu'une nouvelle est fausse jusqu'à preuve du contraire.</p>
 <p>C'est particulièrement probable dans ce cas si, étant donné le passé de Saleh, qui s'est déjà fait prendre à non pas <a href="https://youtu.be/zKXicEB15YM">une</a>, mais <a href="http://www.news.com.au/travel/travel-updates/incidents/tigerair-slams-youtuber-adam-saleh-over-worlds-stupidest-prank/news-story/b9c7d2dc51d38896a3c606d7bbd96583">deux</a> reprises à mettre en ligne de faux vidéos.</p>
-<p>Delta <a href="https://news.delta.com/updated-statement-customers-removed-disruptive-behavior">admet avoir expulsé Saleh</a> et son compagnon de l'avion, mais pour avoir eu un comportement jugé "provocateur", non pas à cause de la langue qu'ils parlaient :</p>
+<p>Delta <a href="http://news.delta.com/updated-statement-customers-removed-disruptive-behavior">admet avoir expulsé Saleh</a> et son compagnon de l'avion, mais pour avoir eu un comportement jugé "provocateur", non pas à cause de la langue qu'ils parlaient :</p>
 <blockquote><p>
   "Based on the information collected to date, it appears the customers who were removed sought to disrupt the cabin with provocative behavior, including shouting. This type of conduct is not welcome on any Delta flight."
 </p></blockquote>
