--- a/_posts/2016-12-30-des-chercheurs-de-luniversite-cambridge-decouvrent-de-la-science-qui-nest-pas-en-anglais.html
+++ b/_posts/2016-12-30-des-chercheurs-de-luniversite-cambridge-decouvrent-de-la-science-qui-nest-pas-en-anglais.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Des chercheurs de l'université Cambridge découvrent de la Science qui n'est
+title: Des chercheurs de l'université Cambridge découvrent de la science qui n'est
   pas en anglais
 date: 2016-12-30 11:06:11.000000000 -05:00
 type: post
