uniformisation des majuscules dans les titres

--- a/_posts/2015-11-27-le-ghana-abandonne-lenseignement-en-anglais.html
+++ b/_posts/2015-11-27-le-ghana-abandonne-lenseignement-en-anglais.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Le Ghana abandonne l'enseignement en Anglais
+title: Le Ghana abandonne l'enseignement en anglais
 date: 2015-11-27 07:11:30.000000000 -05:00
 type: post
 published: true
