--- a/_posts/2015-12-11-cl-et-lavenir-de-la-pop-en-anglais.html
+++ b/_posts/2015-12-11-cl-et-lavenir-de-la-pop-en-anglais.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: CL et l'Avenir de la Pop en Anglais
+title: CL et l'avenir de la pop en anglais
 date: 2015-12-11 11:27:17.000000000 -05:00
 type: post
 published: true
