--- a/_posts/2016-01-03-langlais-contre-le-multilinguisme-en-afrique-du-sud.html
+++ b/_posts/2016-01-03-langlais-contre-le-multilinguisme-en-afrique-du-sud.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: L'Anglais contre le Multilinguisme en Afrique du Sud
+title: L'Anglais contre le multilinguisme en Afrique du Sud
 date: 2016-01-03 13:31:33.000000000 -05:00
 type: post
 published: true
