--- a/_posts/2016-11-15-english-proficiency-index-du-crystal-meth-pour-internet.html
+++ b/_posts/2016-11-15-english-proficiency-index-du-crystal-meth-pour-internet.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'English Proficiency Index : du Crystal Meth pour Internet'
+title: 'English Proficiency Index : du crystal meth pour internet'
 date: 2016-11-15 21:09:42.000000000 -05:00
 type: post
 published: true
