--- a/_posts/2016-11-19-langlais-global-trump-et-le-brexit.html
+++ b/_posts/2016-11-19-langlais-global-trump-et-le-brexit.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: L'Anglais Global, Trump et le Brexit
+title: L'Anglais global, Trump et le Brexit
 date: 2016-11-19 17:35:04.000000000 -05:00
 type: post
 published: true
