--- a/_posts/2016-11-30-le-fondateur-dune-ecole-canadienne-en-arabie-saoudite-invite-les-marocains-a-passer-a-langlais.html
+++ b/_posts/2016-11-30-le-fondateur-dune-ecole-canadienne-en-arabie-saoudite-invite-les-marocains-a-passer-a-langlais.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Le fondateur d'une école canadienne en Arabie Saoudite invite les Marocains
+title: Le fondateur d'une école canadienne en Arabie saoudite invite les Marocains
   à passer à l'anglais
 date: 2016-11-30 15:39:38.000000000 -05:00
 type: post
