--- a/_posts/2016-12-09-les-detaillants-americains-sont-meilleur-que-les-anglais-pour-adapter-leurs-sites-aux-marches-globaux.html
+++ b/_posts/2016-12-09-les-detaillants-americains-sont-meilleur-que-les-anglais-pour-adapter-leurs-sites-aux-marches-globaux.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Les détaillants Américains sont meilleur que les Anglais pour adapter leurs
+title: Les détaillants américains sont meilleur que les Anglais pour adapter leurs
   sites aux marchés globaux
 date: 2016-12-09 11:46:00.000000000 -05:00
 type: post
