--- a/_posts/2016-12-22-english-for-the-islamic-state-ou-langlais-contre-langlais.html
+++ b/_posts/2016-12-22-english-for-the-islamic-state-ou-langlais-contre-langlais.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: English for The Islamic State ou l'anglais contre l'anglais
+title: English for the Islamic State ou l'anglais contre l'anglais
 date: 2016-12-22 14:39:43.000000000 -05:00
 type: post
 published: true
