--- a/_posts/2015-12-13-un-film-de-disney-traduit-est-aussi-mauvais-pour-un-enfant-que-de-fumer-devant-lui-ministere-de-la-culture-espagnol.html
+++ b/_posts/2015-12-13-un-film-de-disney-traduit-est-aussi-mauvais-pour-un-enfant-que-de-fumer-devant-lui-ministere-de-la-culture-espagnol.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'Doubler Disney est aussi nocif que de fumer devant un enfant...: Ministère
+title: 'Doubler Disney est aussi nocif que de fumer devant un enfant...: ministère
   de la Culture espagnol'
 date: 2015-12-13 13:14:41.000000000 -05:00
 type: post
