--- a/_posts/2016-02-20-le-web-profond-de-la-science.html
+++ b/_posts/2016-02-20-le-web-profond-de-la-science.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Le Web Profond de la Science
+title: Le web profond de la science
 date: 2016-02-20 18:51:12.000000000 -05:00
 type: post
 published: true
