--- a/_posts/2016-11-23-avis-aux-sans-abri-parlez-anglais.html
+++ b/_posts/2016-11-23-avis-aux-sans-abri-parlez-anglais.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'Avis aux Sans-Abri : Parlez Anglais'
+title: 'Avis aux sans-abri : parlez anglais'
 date: 2016-11-23 17:08:10.000000000 -05:00
 type: post
 published: true
