--- a/_posts/2016-11-23-pandas-anglophones.html
+++ b/_posts/2016-11-23-pandas-anglophones.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Pandas Anglophones
+title: Pandas anglophones
 date: 2016-11-23 17:07:56.000000000 -05:00
 type: post
 published: true
